--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,9 +42,24 @@ services:
             test: ["CMD", "mysqladmin", "ping", "-p${DB_PASSWORD}"]
             retries: 3
             timeout: 5s
-networks:
-    sail:
-        driver: bridge
-volumes:
-    sailmysql:
-        driver: local
+    phpmyadmin:
+        image: phpmyadmin/phpmyadmin:5
+        ports:
+            - 8080:80
+        links:
+            - mysql
+        environment:
+            PMA_HOST: mysql
+            PMA_PORT: 3306
+        depends_on:
+            mysql:
+                condition: service_healthy
+
+        networks:
+            - sail
+    networks:
+        sail:
+            driver: bridge
+    volumes:
+        sailmysql:
+            driver: local
